--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/claseausentismo_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/claseausentismo_en.properties
@@ -2,10 +2,13 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-titulo=Production Processes
+titulo=Class Absenteeism
+titulo1=Class Absenteeism
 codigo=Code
 descripcion=Description
-centroCosto=Cost Center 
+tipo=Type
+
+
 #Toolbar
 guardar=Save
 editar=Edit
@@ -14,52 +17,51 @@ filtrar=Activate Filter
 xls=Export to XLS
 xml=Export to XML
 pdf=Export to PDF
-nuevo=New Production Process
-eliminar=Erase Production Process
-duplicar=Duplicate Production Process
+nuevo=New Class Absenteeism
+eliminar=Erase Class Absenteeism
+duplicar=Duplicate Class Absenteeism
 rastro=Trace
 refrescar=Refresh
 aceptar=Accept
 atras=Back
-centroCostoD=COST CENTER 
 lovvacio=No results matching your search criteria
-buscarC=Search Cost Center:
-lovVacioD=No results matching your search criteria
-nombre=Name
+tipoAusentismo=TYPES OF ABSENTEEISM
+
+
+
 atencion=WARNING...!
 cambiosRealizados=Do you want to save changes?
 si=Yes
 no=No
 cancelar=Cancel
-necesita=Require
+necesita=Require :
 validacionBorrar=You can not delete this item because it is related to another table
 borrado1=are deleted
 borrado2=Entries
 guardadoExitoso=You have successfully saved changes
 validarNuevo=To add it necessary to add:
 atencionRastros=WARNING
-confirmarRastroHistorico=The PRODUCTIONPROCESS table has historical traces, Continue?
+confirmarRastroHistorico=The CLASESAUSENTISMOS table has historical traces, Continue?
 errorRastroHistorico=The table has no historical traces.
 errorRegistroRastro=The selected record has no traces.
 errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associated entries, do you wish to continue?
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
-errorObjetosDB=Table 'PRODUCTIONPROCESS' not in ObjetosDB. Please contact support.
+errorObjetosDB=Table 'CLASESAUSENTISMOS' not in ObjetosDB. Please contact support.
 editarCodigo=Edit Code
 editarDescripcion=Edit Description
-editarCentroCosto=Editar Cost Center
 nuevoD=New Entry
-nuevoDD=Add New Production Process
-codigoN=*Code:
-codigoNN=Code
-descripcionN=*Description:
-descripcionNN=Description
-centroCostoN=*Cost Center:
-centroCostoNN=Cost Center
-limpiar=Clean
-agregar=Add
+editarTipo=Edit Type
+nuevoDD=Add New Class Absenteeism
+codigoD=*Code:
+nombreD=*Name:
+tipoD=*Type:
+#Add
+agregar=Agregar
+#Clean
+limpiar=Limpiar
 duplicarD=Duplicate Entry
-duplicarDD=Duplicate Production Process
+duplicarDD=Duplicate Class Absenteeism
 codigoE=Code
 descripcionE=Description
-centroCostoE=Cost Center
+tipoE=Type
