--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/conceptosoporte_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/conceptosoporte_en.properties
@@ -2,10 +2,12 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-titulo=Production Processes
+titulo=SUPPORTS CONCEPTS
+titulo1=Supports Concepts
+lovvacio=No results matching your search criteria
 codigo=Code
-descripcion=Description
-centroCosto=Cost Center 
+concepto=Concept
+operando=Operand
 #Toolbar
 guardar=Save
 editar=Edit
@@ -14,18 +16,21 @@ filtrar=Activate Filter
 xls=Export to XLS
 xml=Export to XML
 pdf=Export to PDF
-nuevo=New Production Process
-eliminar=Erase Production Process
-duplicar=Duplicate Production Process
+nuevo=New Support Concept
+eliminar=Erase Support Concept
+duplicar=Duplicate Support Concept
 rastro=Trace
 refrescar=Refresh
 aceptar=Accept
 atras=Back
-centroCostoD=COST CENTER 
-lovvacio=No results matching your search criteria
-buscarC=Search Cost Center:
+mostrarTodos=Show All
+buscarConcepto=Search Concepts
+conceptosD=CONCEPTS
 lovVacioD=No results matching your search criteria
 nombre=Name
+operandos=Operands
+buscarOperando=Search Operand :
+
 atencion=WARNING...!
 cambiosRealizados=Do you want to save changes?
 si=Yes
@@ -38,28 +43,27 @@ borrado2=Entries
 guardadoExitoso=You have successfully saved changes
 validarNuevo=To add it necessary to add:
 atencionRastros=WARNING
-confirmarRastroHistorico=The PRODUCTIONPROCESS table has historical traces, Continue?
+confirmarRastroHistorico=The SUPPORTSCONCEPTS table has historical traces, Continue?
 errorRastroHistorico=The table has no historical traces.
 errorRegistroRastro=The selected record has no traces.
 errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associated entries, do you wish to continue?
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
-errorObjetosDB=Table 'PRODUCTIONPROCESS' not in ObjetosDB. Please contact support.
+errorObjetosDB=Table 'SUPPORTSCONCEPTS' not in ObjetosDB. Please contact support.
 editarCodigo=Edit Code
-editarDescripcion=Edit Description
-editarCentroCosto=Editar Cost Center
+editarConcepto=Edit Concept
+editarOperando=Edit Operand
 nuevoD=New Entry
-nuevoDD=Add New Production Process
+nuevoDD=Add New Sopport Concept
 codigoN=*Code:
+conceptoN=*Concept:
 codigoNN=Code
-descripcionN=*Description:
-descripcionNN=Description
-centroCostoN=*Cost Center:
-centroCostoNN=Cost Center
+conceptoNN=Concept
+operandoN=*Operand:
+operandoNN=Operand
 limpiar=Clean
 agregar=Add
-duplicarD=Duplicate Entry
-duplicarDD=Duplicate Production Process
+duplicarD=Duplicar Entry
 codigoE=Code
-descripcionE=Description
-centroCostoE=Cost Center
+conceptoE=Concept
+operandoE=Operand
