--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/formulacontratoentidad_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/formulacontratoentidad_en.properties
@@ -2,10 +2,10 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-titulo=Production Processes
-codigo=Code
-descripcion=Description
-centroCosto=Cost Center 
+titulo=Entity Type
+titulo1=Type of Entity
+tipoEntidad=Type Entity
+
 #Toolbar
 guardar=Save
 editar=Edit
@@ -14,18 +14,21 @@ filtrar=Activate Filter
 xls=Export to XLS
 xml=Export to XML
 pdf=Export to PDF
-nuevo=New Production Process
-eliminar=Erase Production Process
-duplicar=Duplicate Production Process
+nuevo=New Formula Contract Entity
+eliminar=Erase Formula Contract Entity
+duplicar=Duplicate Formula Contract Entity
 rastro=Trace
 refrescar=Refresh
 aceptar=Accept
 atras=Back
-centroCostoD=COST CENTER 
 lovvacio=No results matching your search criteria
-buscarC=Search Cost Center:
-lovVacioD=No results matching your search criteria
+tipoEntidadD=TYPES ENTITIES
+buscarTipoEntidad=Search Type Entity :
+codigo=Code
 nombre=Name
+
+
+
 atencion=WARNING...!
 cambiosRealizados=Do you want to save changes?
 si=Yes
@@ -38,28 +41,18 @@ borrado2=Entries
 guardadoExitoso=You have successfully saved changes
 validarNuevo=To add it necessary to add:
 atencionRastros=WARNING
-confirmarRastroHistorico=The PRODUCTIONPROCESS table has historical traces, Continue?
+confirmarRastroHistorico=The FORMULASCONTRATOSENTIDADES table has historical traces, Continue?
 errorRastroHistorico=The table has no historical traces.
 errorRegistroRastro=The selected record has no traces.
 errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associated entries, do you wish to continue?
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
-errorObjetosDB=Table 'PRODUCTIONPROCESS' not in ObjetosDB. Please contact support.
-editarCodigo=Edit Code
-editarDescripcion=Edit Description
-editarCentroCosto=Editar Cost Center
+errorObjetosDB=Table 'FORMULASCONTRATOSENTIDADES' not in ObjetosDB. Please contact support.
+editarTipoEntidad=Edit Type Entity
 nuevoD=New Entry
-nuevoDD=Add New Production Process
-codigoN=*Code:
-codigoNN=Code
-descripcionN=*Description:
-descripcionNN=Description
-centroCostoN=*Cost Center:
-centroCostoNN=Cost Center
-limpiar=Clean
+nuevoDD=Add New Formula Contract Entity
+tipoEntidadN=*Type Entity:
 agregar=Add
+limpiar=Clean
 duplicarD=Duplicate Entry
-duplicarDD=Duplicate Production Process
-codigoE=Code
-descripcionE=Description
-centroCostoE=Cost Center
+duplicarDD=Duplicar Formula Contract Entity
