--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada_en.properties
@@ -19,9 +19,9 @@ eliminar=Erase Entry
 duplicar=Duplicate Entry
 rastro=Trace
 #Opciones mensajes user
-opcion1=If you only enter the first date, the system will look for the entries after the date you entered.
-opcion2=If you only enter the second date, the system will look for entries before the date entered.
-opcion3=If you enter both dates, the system will filter the information between both dates.
+opcion1=1. If you only enter the first date, the system will look for the entries after the date you entered.
+opcion2=2. If you only enter the second date, the system will look for entries before the date entered.
+opcion3=3. If you enter both dates, the system will filter the information between both dates.
 #Mensaje Bloque Cargo
 cargo=Position
 textCargo=In this block you can search for positions held data such as positions, position cause, structure and cost center. Parameters dates work like this: 
