--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato_en.properties
@@ -47,7 +47,7 @@ motivoN=Contract Motive:
 tipoN=Type of Contract: 
 ciudadN=City: 
 fisN=Substitution Initial Date: 
-fifN=Adjustment Initial Date: 
+fifH=Date Flex.
 observacionesN=Observations: 
 #Duplicar Registro
 duplicarregistro=Duplicate Entry
@@ -95,3 +95,4 @@ errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associa
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table 'VIGENCIASTIPOSCONTRATOS' hasn't been found ObjetosDB. Please get in touch with support
+fispH=Date Sus.
