--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada_en.properties
@@ -289,3 +289,5 @@ buscarCDE=Search Configuration:
 campo=Field
 detalleBusqueda=Search Detail
 eliminarColumna=Erase Column
+anadirParametros=[ Add to Parameters ]
+refrescar=Refresh
