--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaafiliacion3_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaafiliacion3_en.properties
@@ -102,3 +102,4 @@ errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associa
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table 'VIGENCIASAFILIACIONES' hasn't been found ObjetosDB. Please get in touch with support
 errorFechas=The initial date is less than 01/01/1900 and/or the end date is less than initial date.
+duplicarR=Duplicate information for Effective Affiliations 
