--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato_en.properties
@@ -25,15 +25,15 @@ p=P
 s=S
 #LOV CIUDADES
 ciudadesC=Cities
-buscarC=Search Cities
+buscarC=Search Cities:
 codigoC=Code
 ciudadC=City
 departamentoC=Department
 #LOV MOTIVO
 motivosM=Contract Motives
-buscarM=Search Contract Motives: 
+buscarM=Search Motives: 
 codigoM=Code
-nombreM=Name of Contract Motive
+nombreM=Name
 #LOV TIPOS CONTRATOS
 tiposT=Type of Contracts
 buscarT=Search Type of contract: 
