--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/procesoproductivo_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/procesoproductivo_en.properties
@@ -38,7 +38,7 @@ borrado2=Entries
 guardadoExitoso=You have successfully saved changes
 validarNuevo=To add it necessary to add:
 atencionRastros=WARNING
-confirmarRastroHistorico=The BRANCHES table has historical traces, Continue?
+confirmarRastroHistorico=The PRODUCTIONPROCESS table has historical traces, Continue?
 errorRastroHistorico=The table has no historical traces.
 errorRegistroRastro=The selected record has no traces.
 errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associated entries, do you wish to continue?
