--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion_en.properties
@@ -103,7 +103,7 @@ porcentajeEVP=Percentage (%)
 proyectoEVP=Proyect
 subporcentajeEVP=Sub-Percentage
 fechainicialEVP=Initial Apportionment by Cost Center Date
-fechafinalEVP=End Apportionment by Cost Center Date
+fechafinalEVP=Apportionment End Date by Cost Center
 porcentajeEVPP=Percentage (%)
 proyectoEVPP=Proyect
 fechainicialEVPP=Initial Apportionment by Proyect Date
