--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/conceptosoporte_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/conceptosoporte_en.properties
@@ -67,3 +67,8 @@ duplicarD=Duplicar Entry
 codigoE=Code
 conceptoE=Concept
 operandoE=Operand
+conceptoSoporte=Supports Concepts
+conceptoSoporteD=Search Support Concept :
+descripcion=Description
+duplicarDD=Duplicar Support Concept
+conceptoD=Search Concept:
