--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/formulasaseguradas_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/formulasaseguradas_en.properties
@@ -69,3 +69,7 @@ agregar=Add
 limpiar=Limpiar
 duplicarD=Duplicate Entry
 duplicarDD=Duplicate Insured Formula
+buscarFormulasAseguradas=Search Formula
+mostrarTodos=Show All
+formulaD=Formulas
+buscarFormulasD=Search Formula
