--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/sucursal_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/sucursal_en.properties
@@ -58,3 +58,6 @@ agregar=Add
 tituloD=Duplicate Record
 tituloDD=Branch Duplicate
 duplicarB=Duplicate
+buscarBancoD=Search Banco:
+ciudadesD=Cities
+buscarCiudad=Search City:
