--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada_en.properties
@@ -69,7 +69,7 @@ comentariotd=Comment:
 #Duplicar Registro TD
 duplicarregistrotd=Duplicate Rest taken as Money
 #EDITAR!
-fechaE=Effective date employees Working Day
+fechaE=Date employees Working Day
 nombreE=Working Day's Name
 tipoE=Type of rest
 cdtE=Rest taken as Time Comment
