--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo_en.properties
@@ -79,8 +79,8 @@ observacionesVS=Observations:
 #DuplicarRegistroVS
 duplicarregistroVS=Duplicate Entry
 #Nuevo Registro VA
-nuevoregistroVA=New Effective Affiliations Entry
-ingresarnuevaVA=Add new information for Effective Affiliations
+nuevoregistroVA=New Effective Salary Entry
+ingresarnuevaVA=Add new information for Effective Salary
 fechainicialVA=Initial Date: 
 fechafinalVA=End Date: 
 terceroVA=Supplier: 
@@ -89,7 +89,7 @@ valorVA=Value:
 #DuplicarRegistroVA
 duplicarregistroVA=Duplicate Effective Affiliations Entry
 #EDITAR
-editarFechaVigenciaD=Employee's Effective Salary Date
+editarFechaVigenciaD=Effective Salary Date
 editarMotivoCambioSueldoD=Salary Change Motive
 editarTipoSueldoD=Type of Salary
 editarVigenciaRetroactivo=Effective Retroactive
@@ -98,8 +98,8 @@ editarObservacionesD=Observations
 editarTerceroVAD=Supplier
 editarValorVAD=Value
 editarTipoEntidadVAD=Type of Entity
-editarFechaInicialVAD=Effective Affiliations Initial Date
-editarFechaFinalVAD=Effective Affiliations End Date
+editarFechaInicialVAD=Effective Salary Initial Date
+editarFechaFinalVAD=Effective Salary End Date
 #Dialogos Varios
 guardarCambiosVigenciasAfiliaciones=Do you want to save changes made in Effective Affiliations?
 negacionNuevaS= The fields Date-Retroactive Validity-Value-Salary Change Motive-Type of Salary are obligatory.
