--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaafiliacion3_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaafiliacion3_en.properties
@@ -66,7 +66,7 @@ errorFechasRegistro=Dates Error. The initial date is higher than the end date. P
 errorExistenciaTipoEntidad=There's an entry with the same entity and an defined end date.It's not possible to add the new entry.
 errorTerceroSucursal=Error on the supplier branch.
 errorFechaMenorContratacion=Date Error. The entered date is less than the Employee's contract date. It's recommended to enter a bigger date than the contract date.
-errorFechaInicialRegistro=Date Error. It's recommended to use the first day of the month to add the new entry.
+errorFechaInicialRegistro=It's recommended to use the first day of the month to add the new entry.
 ok=Ok
 #Exportar
 inicialX=Initial Date
