--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ibcautoliquid_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ibcautoliquid_en.properties
@@ -75,3 +75,5 @@ cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
 errorRegNew=The fields Initial Date-Value are obligatory.
 errorFechas=The initial date is null and/or the end date is less than initial date.
+codigo=Code
+nombre=Name
