--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades_en.properties
@@ -40,6 +40,7 @@ ingresarnuevo= Add new city
 #DuplicarRegistro
 duplicarregistro= Duplicate City
 #LovDepartamento
+buscarD=Search State: 
 departamentoN= State name
 #Validacion
 existe=The city you want to add already exists on the database. Please, add a different city.
@@ -60,3 +61,5 @@ codigoN=Code:
 nombreN=City Name: 
 departamentooN=State: 
 codigoalternativoN=Alternative Code: 
+#Validacion
+nombreVacio=The field City Name can't be empty.
