--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado_en.properties
@@ -81,3 +81,17 @@ horasdiasE=Hours/Days
 minutoshorasE=Minutes/Hours
 tipoE=Type
 btnAcumuladoNovedad=Accumulated by Novelty
+conceptoN=Concept: 
+descripcionconceptoN=Concept Description: 
+fechainicialN=Initial Date: 
+fechafinalN=End Date: 
+valorN=Value: 
+saldoN=Balance: 
+codigoN=Code: 
+descripcionperiodicidadN=Regularity Description
+nitN=N.I.T: 
+nombredelterceroN=Supplier Name: 
+formulaN=Formula: 
+horasdiasN=Hours/Days: 
+minutoshorasN=Minutes/Hours: 
+tipoN=Type: 
