--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada_en.properties
@@ -305,3 +305,8 @@ masculino=MALE
 sexo=Gender
 ciudadNacimiento=Hometown 
 ciudadDocumento=Document City
+editarNumeroDocumentoModDatosPersonales=Document Number - Personal
+editarCiudadDocumentoModDatosPersonales=Document City - Personal
+editarCiudadNacimientoModDatosPersonales=Hometown - Personal
+editarFechaInicialModDatosPersonales=Initial Date - Personal
+editarFechaFinalModDatosPersonales=End Date - Personal
