--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada_en.properties
@@ -310,3 +310,42 @@ editarCiudadDocumentoModDatosPersonales=Document City - Personal
 editarCiudadNacimientoModDatosPersonales=Hometown - Personal
 editarFechaInicialModDatosPersonales=Initial Date - Personal
 editarFechaFinalModDatosPersonales=End Date - Personal
+factorRH=RH Factor
+textFactorRH=In this block you can search for rh factor and blood type
+textFactorRH2=To use this option enabled by pressing click Personal Information.
+tabDatosFactorRH=RH Factor Parameters
+grupoSanguineo=Blood Type
+fechaInicio=Initial Date
+estadoCivil=Marital State
+textEstadoCivil=In this block you can search for Marital States, both the Current and Historical Employees.
+textEstadoCivil2=To use this option enabled by pressing click Marital Status.
+tabDatosEstadoCivil=Marital Status Parameters
+estadosCivilesD=Marital States
+buscarECEC=Search Marital State: 
+ciudadesD=Cities
+buscarCDP=Search City: 
+departamento=Departament
+opcion4EstadoCivil=If you don't enter any date, this will bring the current marital status.
+editarEstadoCivilModEstadoCivil=Description - Marital Status
+editarFechaInicialModEstadoCivil=Initial Date - Marital Status
+editarFechaFinalModEstadoCivil=End Date - Marital Status
+desde=Since
+hasta=Until
+lectura=Reading
+conversacion=Conversation
+idioma=Language
+tabDatosIdioma=Language Parameters
+textIdioma2=To use this option enabled by pressing click Language.
+opcion4Idioma=If you don't enter any percentage, this will not filter by percentage.
+textIdioma=In this block you can search for languages \u200b\u200bthat manage employees according to their percentages of Speaking, Reading and Writing.
+escritura=Writing
+idiomasD=Languages
+buscarII=Search Language: 
+editarEscrituraHastaModIdioma=% Until - Writing
+editarEscrituraDesdeModIdioma=% Since - Writing
+editarLecturaHastaModIdioma=% Until - Reading
+editarLecturaDesdeModIdioma=% Since - Reading
+editarConversacionHastaModIdioma=% Until - Conversation
+editarConversacionDesdeModIdioma=% Since - Conversation
+editarIdiomaModIdioma=Name - Language
+errorIdiomaPorcentajes=The until percentage is less than since percentage.
