--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
@@ -248,3 +248,5 @@ primerApellidoXX=First_last_name
 segundoApellidoX=Second last name
 segundoApellidoXX=Second_last_name
 nombreX=Name
+msgborrarLiquidacion=Are you sure you want to delete the liquidation?
+msgborrarLiquidacionPorFuera=Are you sure you want to delete 'settlement outside payroll?
