--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato_en.properties
@@ -42,9 +42,9 @@ tipoT=Type of Contract
 #NUEVO REGISTRO
 nuevoregistro=New Entry
 ingresarnuevo=Add new information for the employee
-fechaN=Date: 
-motivoN=Contract Motive: 
-tipoN=Type of Contract: 
+fechaN=*Date: 
+motivoN=*Contract Motive: 
+tipoN=*Type of Contract: 
 ciudadN=City: 
 fisN=Substitution Initial Date: 
 fifH=Date Flex.
