--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciascargos_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciascargos_en.properties
@@ -109,3 +109,5 @@ errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associa
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table 'VIGENCIASCARGOS' hasn't been found ObjetosDB. Please get in touch with support
+salir=Exit
+fechaDuplicada=The date is already registered, please enter another date.
