PROYECTO01 --> ORIGIN MASTER - WAR (19/05/2014)

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada_en.properties
@@ -310,3 +310,123 @@ editarCiudadDocumentoModDatosPersonales=Document City - Personal
 editarCiudadNacimientoModDatosPersonales=Hometown - Personal
 editarFechaInicialModDatosPersonales=Initial Date - Personal
 editarFechaFinalModDatosPersonales=End Date - Personal
+factorRH=RH Factor
+textFactorRH=In this block you can search for rh factor and blood type
+textFactorRH2=To use this option enabled by pressing click Personal Information.
+tabDatosFactorRH=RH Factor Parameters
+grupoSanguineo=Blood Type
+fechaInicio=Initial Date
+estadoCivil=Marital State
+textEstadoCivil=In this block you can search for Marital States, both the Current and Historical Employees. Parameters dates work like this: 
+textEstadoCivil2=To use this option enabled by pressing click Marital Status.
+tabDatosEstadoCivil=Marital Status Parameters
+estadosCivilesD=Marital States
+buscarECEC=Search Marital State: 
+ciudadesD=Cities
+buscarCDP=Search City: 
+departamento=Departament
+opcion4EstadoCivil=4. If you don't enter any date, this will bring the current marital status.
+editarEstadoCivilModEstadoCivil=Description - Marital Status
+editarFechaInicialModEstadoCivil=Initial Date - Marital Status
+editarFechaFinalModEstadoCivil=End Date - Marital Status
+desde=Since
+hasta=Until
+lectura=Reading
+conversacion=Conversation
+idioma=Language
+tabDatosIdioma=Language Parameters
+textIdioma2=To use this option enabled by pressing click Language.
+opcion4Idioma=4. If you don't enter any percentage, this will not filter by percentage.
+textIdioma=In this block you can search for languages \u200b\u200bthat manage employees according to their percentages of Speaking, Reading and Writing.  Parameters percentage work like this: 
+escritura=Writing
+idiomasD=Languages
+buscarII=Search Language: 
+editarEscrituraHastaModIdioma=% Until - Writing
+editarEscrituraDesdeModIdioma=% Since - Writing
+editarLecturaHastaModIdioma=% Until - Reading
+editarLecturaDesdeModIdioma=% Since - Reading
+editarConversacionHastaModIdioma=% Until - Conversation
+editarConversacionDesdeModIdioma=% Since - Conversation
+editarIdiomaModIdioma=Name - Language
+errorIdiomaPorcentajes=The until percentage is less than since percentage.
+censo=Census
+textCenso=In this block you can search for census. Parameters dates work like this: 
+opcion4Censo=4. If you don't enter any date, this will bring the latter census
+textCenso2=To use this option enabled by pressing click Census.
+tabDatosCenso=Censos Parameters
+tipoIndicador=indicator Type
+indicador=Indicator
+tipoIndicadorD=Indicators Types
+buscarTIC=Search Indicator Type: 
+indicadorD=Indicators
+buscarIC=Search Indicator: 
+editarTipoIndicadorModCenso=Indicator Type - Census
+editarIndicadorModCenso=Indicator - Census
+editarFechaInicialModCenso=Initial Date - Census
+editarFechaFinalModCenso=End Date - Census
+educacionFormal=Formal Education
+textEducacionFormal=In this block you can search for Formal Education Studies conducted found that the Employee. Parameters dates work like this: 
+opcion4Educacion=4. If you don't enter any date, this will bring the latter complete course.
+textEducacionFormal2=To use this option enabled by pressing click Formal Education.
+tabDatosEducacionFormal=Formal Education Parameters
+profesion=Profession
+institucion=Institution
+realizado=Executed
+porEmpresa=BY THE COMPANY
+fueraEmpresa=OUTSITE OF COMPANY
+institucionD=Institutions
+buscarIEF=Search Institution: 
+profesionD=Professions
+buscarPEF=Search Profession: 
+editarProfesionModEducacionFormal=Profession - Formal E.
+editarInstitucionModEducacionFormal=Institution - Formal E.
+editarFechaInicialModEducacionFormal=Initial Date - Formal E.
+editarFechaFinalModEducacionFormal=End Date - Formal E.
+educacionNoFormal=Non-Formal Education
+textEducacionNoFormal=In this block you can search for Non-Formal Education Studies conducted found that the Employee. Parameters dates work like this: 
+textEducacionNoFormal2=To use this option enabled by pressing click Non-Formal Education.
+tabDatosEducacionNoFormal=Non-Formal Education Parameters
+cursoD=Courses
+buscarCENF=Search Course: 
+buscarIENF=Search Institution: 
+editarCursoModEducacionNoFormal=Course - Non-Formal E.
+editarInstitucionModEducacionNoFormal=Institution - Non-Formal E.
+editarFechaInicialModEducacionNoFormal=Initial Date - Non-Formal E.
+editarFechaFinalModEducacionNoFormal=End Date - Non-Formal E.
+curso=Course
+experienciaLaboral=Laboral Experience
+textExperienciaLaboral=In this block you can search for Laboral Experience. Parameters dates work like this: 
+textExperienciaLaboral2=To use this option enabled by pressing click Laboral Experience.
+tabDatosExperienciaLaboral=Laboral Experience Parameters
+sectorEconomico=Economic Sector
+buscarMREL=Search Withdrawal Reason: 
+sectorEconomicoD=Economics Sectors
+buscarSEEL=Search Economic Sector: 
+editarSectorEconomicoModExperienciaLaboral=Economic Sector - Laboral E.
+editarMotivoRetiroModExperienciaLaboral=Withdrawal Reason - Laboral E.
+editarEmpresaModExperienciaLaboral=Company - Laboral E.
+editarCargoModExperienciaLaboral=Position - Laboral E.
+editarFechaInicialModExperienciaLaboral=Initial Date - Laboral E.
+editarFechaFinalModExperienciaLaboral=End Date - Laboral E.
+proyecto=Project
+textProyecto=In this block you can search for projects in which the\u00a0Employees participated. Parameters dates work like this: 
+textProyecto2=To use this option enabled by pressing click Project
+tabDatosProyecto=Project Parameters
+rol=Role
+proyectoD=Projects
+buscarPP=Search Project: 
+pryRolD=Roles
+buscarPRYP=Search Role: 
+editarProyectoModProyecto=Project - Project
+editarRolModProyecto=Role - Project
+editarFechaInicialModProyecto=Initial Date - Project
+editarFechaFinalModProyecto=End Date - Project
+opcion4Proyecto=4. If you don't enter any date, this will bring the final project conducted according to the parameters entered.
+cargoPostularse=Position tu Apply
+textCargoPostularse=In this block you can search for position to apply.
+textCargoPostularse2=To use this option enabled by pressing click Position to Apply
+tabDatosCargoPostularse=Position to Apply Parameters
+buscarCCP=Search Position: 
+editarCargoModCargoPostularse=Position - Position
+nomina=Payroll
+personal=Personal
