--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada_en.properties
@@ -119,3 +119,5 @@ cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
 errorFechas=The Effective Date is less than 01/01/1900.
+errorFechaDescanso=The end date is less than initial date.
+errorNullDescanso=The fields initial date and end date are obligatory.
