--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato_en.properties
@@ -42,9 +42,9 @@ tipoT=Type of Contract
 #NUEVO REGISTRO
 nuevoregistro=New Entry
 ingresarnuevo=Add new information for the employee
-fechaN=Date: 
-motivoN=Contract Motive: 
-tipoN=Type of Contract: 
+fechaN=*Date: 
+motivoN=*Contract Motive: 
+tipoN=*Type of Contract: 
 ciudadN=City: 
 fisN=Substitution Initial Date: 
 fifH=Date Flex.
@@ -86,6 +86,7 @@ validacionNuevo= To insert a new effective contract type it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
+salir=Exit
 #RASTRO
 confirmarRastro=The table 'VIGENCIASTIPOSCONTRATOS' has traces for the selected entry, do you wish to continue?
 confirmarRastroHistorico=The table 'VIGENCIASTIPOSCONTRATOS' has historic traces,do you wish to continue?
