PROYECTO01 --> ORIGIN MASTER WAR (19/02/2014)

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada_en.properties
@@ -430,3 +430,6 @@ buscarCCP=Search Position:
 editarCargoModCargoPostularse=Position - Position
 nomina=Payroll
 personal=Personal
+salir=Exit
+errorFormatoNumDocumento=The document number is not valid.
+cancelar=Cancel
