--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/configurarcolumna_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/configurarcolumna_en.properties
@@ -36,3 +36,5 @@ atencion=WARNING!!!
 detalleConfiguracionD=Details Columns
 descripcion=Description
 errorNewColumna=You can't add a new column. The limit is 10 columns
+salir=Exit
+cancelar=Cancel
