--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaafiliacion3_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaafiliacion3_en.properties
@@ -103,3 +103,4 @@ seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table 'VIGENCIASAFILIACIONES' hasn't been found ObjetosDB. Please get in touch with support
 errorFechas=The initial date is less than 01/01/1900 and/or the end date is less than initial date.
 duplicarR=Duplicate information for Effective Affiliations 
+salir=Exit
