--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportelaboral_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportelaboral_en.properties
@@ -54,7 +54,7 @@ codigooEMPH=Employee Code
 nombreEMPH=Employee Name
 #LOV EMPRESA
 empresaE=Company
-buscarE=Search Company
+buscarE=Search Company: 
 nitE=N.I.T
 nombreE=Name
 #Dialogo de Correos
@@ -107,3 +107,4 @@ infoReporteCodigoD=Report Code
 infoReporteNombreD=Report Name
 errorRegNew=The fields Date Since - Date Until- Employee Since - Employee Until are obligatory.
 errorFechas=The date until is less than date since.
+salir=Exit
