--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplnovedad_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplnovedad_en.properties
@@ -82,3 +82,4 @@ validacionNuevo= To insert a new entry it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
+salir=Exit
