PROYECTO01 --> ORIGIN MASTER  WAR (28/05/2014)

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual_en.properties
@@ -28,13 +28,138 @@ refrescar= Refresh
 salir=Exit
 ##
 
-titulo=
-infoBasica=
-informacionPersona=
-modPersonal=
-modCargo=
-modCentroCosto=
-modTipoTrabajador=
-modTipoSalario=
-modSueldo=
-empresa=
+titulo=Newly Incorporated Staff
+infoBasica=Enter the new employee basic data. Be aware that the information required on this form is key to be able to settle the employe. If you wish to complete aditional information, you can go to Personal Data after you insert an employee
+informacionPersona=New Employee Information
+modPersonal=Personal Information
+modCargo=Position Perfomd
+modCentroCosto=Cost Centers - Location
+modTipoTrabajador=Worker Type
+modTipoSalario=Salary Type (Labor Reform)
+modSueldo=Salary
+empresa=Company
+primerApellido=Fist Name
+segundoApellido=Last Name
+nombres=Names
+sexo=Gender
+masculino=MALE
+femenino=FEMALE
+tipoDocumento=Document Type
+numeroIdentificacion=Identification Number
+ciudadDocumento=Document City
+fechaNacimiento=Date of Birth
+ciudadNacimiento=Birth City
+fechaIngreso=Entry Date
+codigoEmpleado=Employee Code
+correoElectronico=Email
+fechaUltimoPago=Last Payment Date
+nombreCargo=Position Name
+motivoCargo=Motive Position
+nombreEstructuraCargo=Position Structure Name
+papelDesempe\u00f1ado=Perform Role
+descripcionEstructura=Structure Description
+descripcionMotivo=Motive Description
+empleadoJefe=Boss Employee
+tipoTrabajador=Worker Type
+tipoSalario=Salary Type
+valorSueldo=Salary Value
+motivoSueldo=Salary Motive
+tipoCompensacion=Compensation Type
+unidadPago=Payment Unit
+modTipoContrato=Contract Type
+motivoContrato=Contract Motive
+tipoContrato=Contract Type
+fechaFinalContrato=Contract End Date
+modNormaLaboral=Labor Norm
+normaLaboral=Labor Norm Name
+modLegislacionLaboral=Labor Law
+legislacionLaboral=Labor Law Name
+modUbicacionGeografica=Geographic Location
+ubicacionGeografica=Geographic Location
+modJornadaLaboral=Labor Working Day
+jornadaLaboral=Working Day Name
+modFormaPago=Payment Method
+formaPago=Payment Method Name
+cuentaPago=Payment Account
+tipoCuenta=Account Type
+ahorros=SAVINGS
+corriente=CURRENT
+sucursalPago=Payment Branch Office
+metodoPago=Payment Method
+modAfiliaciones=Affiliations
+eps=P.H.I.(Promoting Health Institution)
+afp=P.F.I.(Pensions Funds Insurance)
+fondoCensantias=Severance Fund
+arp=P.H.M.(Professional Hazards Management)
+cajaCompensacion=Compensation Office
+camposOpcionales=The next fields are optionals
+modFactorRH=RH Factor
+modEstadoCivil=Marital Status
+modDireccion=Address
+modTelefono=Phone
+grupoSanguineo=Blood Group
+factorRH=RH Factor
+descripcion=Description
+direccion=Address
+ciudad=City
+tipoTelefono=Phone Type
+numeroTelefono=Phone Number
+empresaM=Companies
+buscarEIP=Search Company: 
+nombreEmpresa=Company Name
+nitEmpresa=Company NIT
+tipoDocumentoM=Documents Types
+buscarTDIP=Search Document Type: 
+nombreCorto=Short Name
+ciudadDocumentoM=Cities
+buscarCDIP=Search City: 
+departamento=Departament
+ciudadNacimientoM=Cities
+buscarCNIP=Search City: 
+nombre=Name
+advertenciaFechaIngreso=The date of entry is not found among the active period of the user. Please check the parameters of the user or the settlement date of admission before continuing.
+errorFechas=The entry date is less than 01/01/1900
+editarEmpresaInformacionPersonal=Employe Company
+editarPrimerApellidoInformacionPersonal=Employee First Name
+editarSegundoApellidoInformacionPersonal=Employee Last Name
+editarNombresInformacionPersonal=Employee Names
+editarTipoDocumentoInformacionPersonal=Employee Document Type
+editarNumeroDocumentoInformacionPersonal=Employee Document Number
+editarCiudadDocumentoInformacionPersonal=Employee Document City
+editarFechaNacimientoInformacionPersonal=Employee Birth Date
+editarCiudadNacimientoInformacionPersonal=Employee Birth City
+editarFechaIngresoInformacionPersonal=Employee Entry Date
+editarCodigoEmpleadoInformacionPersonal=Employee Code
+editarEmailInformacionPersonal=Employee Email
+editarFechaUltimoPagoInformacionPersonal=Last Payment Date
+cargoM=Positions
+buscarCCD=Search Position: 
+motivoCambioCargoM=Motives Changes Positions
+buscarMCCCD=Search Motive: 
+nombreMotivoCargo=Motive Change Position Name
+estructuraM=Structures
+buscarECD=Search Structure: 
+nombreEstructura=Structute Name
+papelM=Roles
+buscarPCD=Search Role: 
+nombrePapel=Role Name
+editarCargoCargoDesempe\u00f1ado=Position Perform Name
+editarMotivoCargoDesempe\u00f1ado=Motive Position Name
+editarEstructuraCargoDesempe\u00f1ado=Position Structure Name
+editarPapelCargoDesempe\u00f1ado=Perform Role
+jefeM=Employees
+buscarEJCD=Search Employee: 
+empleado=Employee Name
+editarEmpleadoJefeCargoDesempe\u00f1ado=Boss Employee
+estructuraM2=Costs Centers Structures
+buscarECC=Search Structure: 
+codigoCentroCosto=Cost Center Code
+nombreCentroCosto=Cost Center Name
+motivoLocalizacionM=Locations Motives
+buscarMLCC=Search Motives: 
+editarEstructuraCentroCosto=Cost Center Structure
+editarMotivoCentroCosto=Cost Center Motive
+tipoTrabajadorM=Workers Types
+buscarTTTT=Search Worker Type: 
+nombreTipoTrabajador=Worker Name
+editarTrabajadorTipoTrabajador=Worker Type Name
