--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplmvrs_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplmvrs_en.properties
@@ -123,3 +123,4 @@ errorRegNewMvr=The fields Initial Date-Motives are obligarity.
 errorFechas=The initial date is null and/or the end date is less than initial date.
 errorRegNewOtro=The fields Initial Date-End Date-State-Other Certificates are obligatory.
 errorFechasOC=The initial date is less than end date.
+salir=Exit
