--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente_en.properties
@@ -75,3 +75,4 @@ abierto=OPEN
 errorRegNew=The fields Initial Date-End Date-State-Pending Days are obligatory.
 errorFechas=The initial date is less than 01/01/1900 and/or the end date is less than initial date.
 errorFechaContratacion=The dates entered are less than the employee's date of hire.
+salir=Exit
