--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada_en.properties
@@ -121,3 +121,4 @@ refrescar= Refresh
 errorFechas=The Effective Date is less than 01/01/1900.
 errorFechaDescanso=The end date is less than initial date.
 errorNullDescanso=The fields initial date and end date are obligatory.
+salir=Salir
