--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo_en.properties
@@ -69,22 +69,22 @@ sueldodelempleado=Employee's Salary
 #Nuevo RegistroVS
 nuevoregistroVS=New Entry
 ingresarnuevoVS=Add new information for the employee
-fechavigenciaVS=Effective Date: 
-motivocambiosueldoVS=Salary Change Motive: 
-tiposueldoVS=Type of Salary: 
+fechavigenciaVS=*Effective Date: 
+motivocambiosueldoVS=*Salary Change Motive: 
+tiposueldoVS=*Type of Salary: 
 retroactivoVS=Retroactive: 
-vigenciaretroactivoVS=Effective Retroactive: 
-valorVS=Value: 
+vigenciaretroactivoVS=*Effective Retroactive: 
+valorVS=*Value: 
 observacionesVS=Observations: 
 #DuplicarRegistroVS
 duplicarregistroVS=Duplicate Entry
 #Nuevo Registro VA
 nuevoregistroVA=New Effective Salary Entry
 ingresarnuevaVA=Add new information for Effective Salary
-fechainicialVA=Initial Date: 
+fechainicialVA=*Initial Date: 
 fechafinalVA=End Date: 
-terceroVA=Supplier: 
-tipoentidadVA=Type of Entity: 
+terceroVA=*Supplier: 
+tipoentidadVA=*Type of Entity: 
 valorVA=Value: 
 #DuplicarRegistroVA
 duplicarregistroVA=Duplicate Effective Affiliations Entry
