--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador_en.properties
@@ -117,3 +117,4 @@ errorFechaVTT=The effective date is less than 01/01/1900.
 errorRegRetiro=The Retirement Date field is empty and/or the observation has over 500 characters
 errorRegPensionado=The Initial Date field is empty and/or Pension Class field is empty\n
 errorRegNewVTT=The fields Effective Date-Worker Type are obligatory.
+salir=Exit
