--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/empleadoindividual_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/empleadoindividual_en.properties
@@ -179,3 +179,4 @@ atras=Back
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
+infCargueFoto=Please select a JPG image with a maximun size of 300 KB.
